# find-bufo

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  fly.toml  justfile
bot/: .env.example  Dockerfile  README.md  build.zig  build.zig.zon  fly.toml  justfile  pyproject.toml
bot/src/: bsky.zig  config.zig  jetstream.zig  main.zig  matcher.zig  stats.zig  stats_template.zig
bot/src/bufo_bot/: config.py  dry_run.py  jetstream.py  main.py  matcher.py
docs/: zig-atproto-sdk-wishlist.md
scripts/: add_one_bufo.py  ingest_bufos.py
src/: config.rs  embedding.rs  filter.rs  image.rs  main.rs  providers.rs  scoring.rs  search.rs  turbopuffer.rs
static/: bufo-peek.js  index.html  manifest.json
