[package]
name = "find-bufo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
base64 = "0.22"
actix-governor = "0.10.0"

# observability with logfire
logfire = "0.8"
tracing = "0.1"
log = "0.4"  # keep for compatibility with existing debug logs
opentelemetry = { version = "0.26", features = ["trace", "metrics"] }
opentelemetry-instrumentation-actix-web = { version = "0.23", features = ["metrics"] }
opentelemetry-otlp = { version = "0.26", features = ["trace", "http-proto", "reqwest-client", "reqwest-rustls"] }
