[project]
name = "bufo-bot"
version = "0.1.0"
description = "bluesky bot that responds to posts with matching bufo images"
requires-python = ">=3.11"
dependencies = [
    "atproto>=0.0.59",
    "httpx-ws>=0.7.1",
    "pydantic-settings>=2.7.1",
    "httpx>=0.28.1",
]

[project.scripts]
bufo-bot = "bufo_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bufo_bot"]

[tool.ruff]
extend-select = ["I", "UP"]
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
